--- a/minecraft-server/Dockerfile
+++ b/minecraft-server/Dockerfile
@@ -1,5 +1,4 @@
-FROM alpine
-#FROM container4armhf/armhf-alpine
+FROM container4armhf/armhf-alpine
 
 MAINTAINER itzg
 
@@ -30,8 +29,7 @@ RUN addgroup -g 1000 minecraft \
 
 EXPOSE 25565 25575
 
-#ADD https://github.com/itzg/restify/releases/download/1.0.3/restify_linux_arm /usr/local/bin/restify
-ADD https://github.com/itzg/restify/releases/download/1.0.3/restify_linux_amd64 /usr/local/bin/restify
+ADD https://github.com/itzg/restify/releases/download/1.0.3/restify_linux_arm /usr/local/bin/restify
 COPY start.sh /start
 COPY start-minecraft.sh /start-minecraft
 COPY mcadmin.jq /usr/share
@@ -45,6 +43,6 @@ ENTRYPOINT [ "/start" ]
 
 ENV UID=1000 GID=1000 \
     MOTD="A Minecraft Server Powered by Docker" \
-    JVM_OPTS="-Xmx1024M -Xms256M" \
+    JVM_OPTS="-Xmx768M -Xms256M" \
     TYPE=VANILLA VERSION=LATEST FORGEVERSION=RECOMMENDED LEVEL=world PVP=true DIFFICULTY=easy \
     LEVEL_TYPE=DEFAULT GENERATOR_SETTINGS= WORLD= MODPACK= ONLINE_MODE=TRUE CONSOLE=true
